支持两种类加载方式